--- a/ultimate-hooks/package.json
+++ b/ultimate-hooks/package.json
@@ -16,7 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --port=3005 --watch db.json"
+    "server": "json-server --port=3005 --watch db.json",
+    "eslint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.14.0",
     "json-server": "^0.15.1"
   }
 }
